--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -43,8 +43,8 @@
                         </div>
                         <div class="mr-3 pt-2">
 {#                            for product level to avoid ssx#}
-{#                            {{ answer|striptags|markdown }}#}
-                            {{ answer | markdown }}
+                            {{ answer|striptags|markdown }}
+{#                            {{ answer | markdown }}#}
                             <p>-- Mallory</p>
                         </div>
                         <div class="vote-arrows flex-fill pt-2 js-vote-arrows" style="min-width: 90px;">
